# Team6-instrument-cluster

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  rpi.bash  tree_structure.txt
.github/workflows/: practice.yml
arduino/: README.md  speedsensor.c
instrumentcluster/Canprocess/: CMakeLists.txt  dialcontrol.qml  main.cpp  receivedata.h  resources.qrc
instrumentcluster/project/: CMakeLists.txt  Cluster.qml  Main.qml  SpeedContoller+EMA.cpp  SpeedController.cpp  SpeedController.h  SpeedController_KF.cpp  battery.cpp  battery.h  canreceiver.cpp  canreceiver.h  main.cpp  resources.qrc  speedcontrol.cpp
project/: CMakeLists.txt  SpeedController.cpp  battery.cpp  canreceiver.h  main.cpp  receivedata.cpp  speedcontrol.cpp
qmlpractice/dialcontrol/: Dial.qml  canprocess.cpp  canprocess.h  canprocessing.cpp  canprocessing.h  csacsa.cpp  csacsa.h
src/: CMakeLists.txt  Cluster.qml  Main.qml  SpeedContoller+EMA.cpp  resources.qrc  speedcontrol.h
test_for_IC/: CMakeLists.txt  CMakeLists.txt.user.0193f36  Cluster.qml  main.cpp  resources.qrc  speedcontroller.cpp  speedcontroller.h
test_for_IC2/: CMakeLists.txt  Main.qml  SpeedController.cpp  SpeedController.h  SpeedController2.cpp  SpeedController2.h  main.cpp
